include $(top_srcdir)/common.am
SUBDIRS = \
         precision \
         constants \
         delftio \
         esmfsm \
         ftnunit \
         inifiles \
         nefis \
         delftio_sync \
         semaphore \
         stream \
         deltares_common \
         meteo \
         ec_module \
         d_hydro_lib
