include $(top_srcdir)/common.am
SUBDIRS = \
         deltares_common \
         delftonline \
         delftio \
         esmfsm \
         ftnunit \
         io_netcdf \
         hyd_to_waq_part_lib \
         nefis \
         kdtree_wrapper \
         ec_module \
         d_hydro_lib \
         gridgeom \
         ods
