if(NOT DEFINED ESMF_SO_FOLDER)
	set(ESMF_SO_FOLDER ${checkout_src_root}/third_party_open/esmf/lnx64/bin)
endif()
if(NOT DEFINED ESMF_SO_FILE)
	set(ESMF_SO_FILE ${ESMF_SO_FOLDER}/libesmf.so)
endif()
if(NOT EXISTS "${CMAKE_INSTALL_PREFIX}/share/libesmf.so")
	install(PROGRAMS ${ESMF_SO_FILE} DESTINATION share)
endif()
if(NOT DEFINED COMMIT_VERSION)
        set(COMMIT_VERSION "0")
endif()
install(SCRIPT "${checkout_src_root}/cmake/install_wq/install_and_bundle.cmake")
configure_package_installer("DELWAQ" "${checkout_src_root}/cmake/install_wq/ReadMe.txt" "1" "0" "${COMMIT_VERSION}" "STGZ")
