#-------------------------------------------------------------------------------
#   Makefile
#
#   Copyright (C)  Stichting Deltares, 2011-2018.
#-------------------------------------------------------------------------------

include $(top_srcdir)/common.am
#-------------------------------------------------------------------------------
#Includes
dist_bin_SCRIPTS = \
	run_aeolis_dflowfm_dwaves.sh \
	rd2d3d.sh \
	run_dflow2d3d.sh \
	run_dflow2d3d_dwaves.sh \
	run_dflow2d3d_fluidmud.sh \
	run_dflow2d3d_parallel.sh \
	run_dflow2d3d_parallel_dwaves.sh \
	run_dflow2d3d_rtc.sh \
	submit_dflow2d3d.sh
