#-------------------------------------------------------------------------------
#   Makefile
#
#   Copyright (C)  Stichting Deltares, 2011-2018.
#-------------------------------------------------------------------------------

include $(top_srcdir)/common.am
#-------------------------------------------------------------------------------
#Includes
dist_pkgdata_DATA = \
	bloom.spe \
	proc_def.dat \
	proc_def.def

