#-------------------------------------------------------------------------------
#   Makefile for culvert
#
#   Irv.Elshoff@deltares.nl
#   Adri.Mourits@deltares.nl
#   Fedor.Baart@deltares.nl
#   11 jan 2007
#
#   Copyright (C) 2007, Deltares
#-------------------------------------------------------------------------------

include $(top_srcdir)/common.am
lib_LTLIBRARIES = libPluginCulvert.la

#-------------------------------------------------------------------------------
#Sources
libPluginCulvert_la_SOURCES = \
         plugin_culvert.f90

#-------------------------------------------------------------------------------
#Libraries

